fix standard card spacing pt 2 (i'm a silly girl in love sorry)

--- a/jc-trello-app-front/src/components/screen/backlog-screen/backlogScreen.module.css
+++ b/jc-trello-app-front/src/components/screen/backlog-screen/backlogScreen.module.css
@@ -51,7 +51,7 @@
     width: 95%;
     height: 85%;
     flex-wrap: wrap;
-    gap:1vw;
+    gap:1rem;
     align-content: baseline;
 }
 
