--- a/jc-trello-app-front/src/components/screen/task-screen/taskScreen.module.css
+++ b/jc-trello-app-front/src/components/screen/task-screen/taskScreen.module.css
@@ -76,7 +76,7 @@
     align-items: center;
     position: relative;
     z-index: 1;
-    gap:1vw;
+    gap:1rem;
 }
 
 .sprintDescriptionContainer{
